# dlfx-ppi-h2ra-mimic-eicu

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: study_default.yaml  study_negative_control_1d.yaml
data/: README.md  manifest.tsv
docs/: AUDIT_REPORT.md  CLAIMS.tsv  CLAIM_LANGUAGE_CHECKLIST.md  DATA_ACCESS.md  DATA_PLAN.md  DATA_SOURCES.md  EFFECT_SIZE_CHECKLIST.md  EXTRACTION_LOCAL_DUCKDB.md  FIGURE4_AND_SUPPLEMENT_PLAN.md  FIGURE_STORYBOARD.tsv  JOURNAL_TARGET.md  LITERATURE_BENCHMARK.md  NEXT_STEPS.md  PROJECT_HYPOTHESIS.md  PROJECT_STATUS.md  PROTOCOL_FREEZE.md  PUBLIC_RELEASE_POLICY.md  Q2_REPORTING_PACKAGE.md  REVIEWER_ATTACK_MAP.md  SENSITIVITY_REGISTRY.tsv  SOURCE_DATA_MAP.tsv
docs/release_bundle/: REPRODUCTION_GUIDE.md  bundle_checksums.tsv  bundle_contents.txt  policy.md  zip_sha256.txt
docs/review_bundle/: REVIEWER_GUIDE.md  bundle_checksums.tsv  bundle_contents.txt  policy.md  zip_sha256.txt
protocol/: codebook.md  protocol.md  strobe_record_checklist.md
scripts/: build_release_bundle.py  build_review_bundle.py  extract_eicu_duckdb.py  extract_mimic_duckdb.py  generate_attrition_flow.py  generate_synthetic_table.py  make_figure4_and_supplement.py  make_publication_board.py  rebuild_combined_from_existing.py  run_multicohort.py  run_primary_analysis.py  run_sensitivity_suite.py  run_study.py  validate_analysis_table.py
sql/eicu/: README.md  build_analysis_table.sql
sql/mimic/: README.md  build_analysis_table.sql
src/dlfx/: audit.py  io.py  (+9 more)
tests/: test_run_study.py  test_smoke_pipeline.py
